upload to try fix color green on mobile css

--- a/css/app.css
+++ b/css/app.css
@@ -34,6 +34,13 @@ h1 {
     text-transform: uppercase;
 }
 
+p {
+    font-size: 1.1em;
+}
+
+em {
+    font-weight: 700;
+}
 /*
  * Styles for the deck of cards
  */
@@ -118,8 +125,54 @@ h1 {
     color: gold;
 }
 
-.score-panel .restart {
+.restart {
     float: right;
     cursor: pointer;
     font-size: 24px;
+}
+
+ /* The Modal (background) */
+ .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    position: relative;
+    background-color: rgba(180, 159, 36, 0.93);
+    margin: 35% auto; /* 15% from the top and centered */
+    border-radius: 12px;
+    padding: 20px;
+    box-shadow: 8px 12px 12px 24px rgba(0, 0, 0, 0.303);
+    width: 60%; /* Could be more or less, depending on screen size */
+    animation-name: animatetop;
+    animation-duration: 0.9s;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+}
+
+.modal .modal-content p {
+    width: 100%;
+}
+
+.modal .modal-content .restart {
+    padding: 12px;
+    border-radius: 6px;
+    background-color: rgba(52, 126, 52, 0.899);
+    color: #d7d7d7;
+}
+
+@keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
 }
